# terminator

./: .competitors  .gitignore  .lookuptable.ata  .lookuptable.custom  Cargo.toml  Makefile  benchmark_builds.sh  build_performance.sh  crank_boom.sh  crank_near.sh  p.txt  pp.txt
dump_data/: 352076469.json  352452014.json  352452338.json  352452905.json  352453071.json  352457001.json  352457051.json  352457109.json  352457154.json  352460856.json  352503601.json  352523815.json  352529783.json  352536749.json  352536807.json  352820025.json  353377089.json  353377089_1752548326.json  353379767.json  353379788.json  353484065.json  353484067.json  353486072.json  353486076.json  354083959.json  354098625.json  354098633.json  354191005.json  354191013.json  355221453.json  355221453_1753278310.json  355221454.json  355221601.json
terminator/: .gitignore  Cargo copy.toml  Cargo.toml  INSTRUCTION_PARSING_GUIDE.md
terminator/crates/custom:extra-proto/: Cargo.toml  build.rs
terminator/crates/custom:extra-proto/src/: dummy.proto  extra.proto  lib.rs
terminator/examples/: instruction_parsing.rs  practical_usage.rs
terminator/src/: accounts.rs  calibrator.rs  client.rs  config.rs  instruction_parser.rs  instructions.rs  jupiter.rs  lib.rs  liquidation_engine.rs  liquidator.rs  main.rs  math.rs  operations.rs  px.rs  sysvars.rs  yellowstone_transaction.rs
